--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,46 @@ body {
   background: #424242;
   color: #C7C7C7;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  padding: 5px;
+}
+
+h1 {
+    color: white;
+    font-weight: bold;
+}
+
+.selectorsAndProvisions {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.centered {
+  text-align: center;
 }
 
 #logo {
   max-width: 300px;
+}
+
+.curio {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px 0;
+}
+
+.curio-cell {
+  flex: 0 1 auto;
+  width: 300px;
+  margin: 5px 0;
+}
+
+.curio-name {
+  font-size: 20px;
+  color: white;
+}
+
+.curio-outcome {
+  padding-left: 5px;
+  padding-top: 5px;
 }
