--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+@font-face {font-family: 'DwarvenAxeBB';src: url('webfonts/3073CA_0_0.eot');src: url('webfonts/3073CA_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3073CA_0_0.woff2') format('woff2'),url('webfonts/3073CA_0_0.woff') format('woff'),url('./fonts/3073CA_0_0.ttf') format('truetype');}
+@font-face {font-family: 'DwarvenAxeBB-Italic';src: url('webfonts/3073CA_1_0.eot');src: url('webfonts/3073CA_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3073CA_1_0.woff2') format('woff2'),url('webfonts/3073CA_1_0.woff') format('woff'),url('./fonts/3073CA_1_0.ttf') format('truetype');}
+
 body {
   background: #424242;
   color: #C7C7C7;
@@ -7,8 +10,12 @@ body {
 }
 
 h1 {
-  color: white;
-  font-weight: bold;
+  color: black;
+  font-size: 40px;
+  font-family: 'DwarvenAxeBB';
+  font-weight: normal;
+  padding: 0;
+  margin: 10px 0 5px 0;
 }
 
 input[type=radio], input~label {
@@ -37,8 +44,10 @@ input[type=radio], input~label {
 
 .provision-quantity {
   position: absolute;
-  bottom: 5px;
-  left: 5px;
+  bottom: 10px;
+  left: 10px;
+  font-size: 20px;
+  font-family: 'DwarvenAxeBB';
 }
 
 .provision-icon {
